--- a/res/values/bliss_config.xml
+++ b/res/values/bliss_config.xml
@@ -24,4 +24,7 @@
 
     <!-- FOD recognizing animation -->
     <bool name="config_showFODAnimationSettings">false</bool>
+
+    <!-- Screen off FOD -->
+    <bool name="config_supportScreenOffFod">false</bool>
 </resources>
